# memnetai-agent-integration

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  compatibility.md
scripts/: bootstrap.py
skills/install-memnetai/: SKILL.md
skills/install-memnetai/agents/: openai.yaml
skills/install-memnetai/references/: api-contract.md  host-integration.md  installation-workflow.md  runtime-contract.md
src/memnetai_agent_integration/: __init__.py  cli.py  client.py  config.py  database.py  health.py  hooks.py  runtime.py  secrets.py
src/memnetai_agent_integration/adapters/: __init__.py  base.py  codex.py  generic_prompt.py  hermes.py  workbuddy.py
src/memnetai_agent_integration/installers/: __init__.py  files.py  manifest.py  scheduler.py
tests/: test_adapters.py  test_bootstrap.py  test_cli.py  test_installers.py  test_runtime.py  test_scaffold.py
